extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/base/tests/keywordasname.out
* errors
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/base/tests/keywordasname.ob:1:8:error: ident expected
MODULE END;
       ^
